--- a/ChessUI/MainWindow.xaml
+++ b/ChessUI/MainWindow.xaml
@@ -6,7 +6,8 @@
         xmlns:local="clr-namespace:ChessUI"
         mc:Ignorable="d"
         Title="MainWindow" Width="600" SizeToContent="Height"
-        Icon="Assets/icon.ico">
+        Icon="Assets/icon.ico"
+        KeyDown="Window_KeyDown">
     <Viewbox>
         <Grid x:Name="BoardGrid"
               Width="600"
